FIX: table header vertical align

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -45,7 +45,7 @@ th, td {
 }
 th {
     text-align: left;
-    vertical-align: bottom;
+    vertical-align: middle;
     border-bottom: 2px solid $border-color;
 }
 td {
